# starting-ragchatbot-codebase

./: .coverage  .flake8  CLAUDE.md  README.md  coverage.xml  pyproject.toml  run_tests.sh
backend/: ai_generator.py  app.py  search_tools.py
backend/tests/: README.md  conftest.py  test_api.py  test_api_simple.py  test_app.py  test_models.py
frontend/: index.html  script.js  style.css
scripts/: dev.sh  format.sh  lint.sh
